Revert "added card and fixed button alignment on application show page"

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -195,22 +195,14 @@
   }
 }
 
-
-.btn-flat {
-  display: inline-block;
-  color: white;
-  padding: 8px 24px;
-  border-radius: 8px;
-  background: $green;
-  transition: background 0.3s ease;
-}
-
 .btn-reject {
   display: inline-block;
   color: white;
   padding: 8px 24px;
   border-radius: 8px;
   background: #DC3645;
+  width: 192px;
+  height: 42px;
   transition: background 0.3s ease;
   &:hover {
     color: white;
