--- a/app/assets/stylesheets/components/_tag.scss
+++ b/app/assets/stylesheets/components/_tag.scss
@@ -1,7 +1,5 @@
 .tag {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: inline-block;
   color: white;
   padding: 8px 24px;
   border-radius: 20px;
