--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -11,7 +11,7 @@ body {
     font-family: 'Yantramanav', sans-serif;
     font-weight: 100;
   }
-  p, a, li {
+  p, a {
     font-family: 'Yantramanav', sans-serif;
     font-weight: 300;
   }
