--- a/app/assets/stylesheets/pages/application_show_page.scss
+++ b/app/assets/stylesheets/pages/application_show_page.scss
@@ -11,18 +11,3 @@ ol {
 .buttons {
   display: flex;
 }
-
-.card-application-show {
-  padding: 30px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  border-radius: 10px;
-}
-
-.application-answer {
-  box-shadow: 0 0 5px rgba(0,0,0,0.2);
-  width: 50%;
-  border-radius: 10px;
-  padding: 10px;
-  margin: 10px;
-  font-size: 17px;
-}
